<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/no_network_warn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33.3dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="33.3dp"
        android:text="@string/no_network"
        android:textColor="#666666"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/no_network_step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/no_network_warn"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:lineSpacingExtra="3dp"
        android:text="@string/no_network_step1"
        android:textColor="#666666"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/no_network_step2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/no_network_step1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:lineSpacingExtra="3dp"
        android:text="@string/no_network_step2"
        android:textColor="#666666"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/no_network_step3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingBottom="20dp"
        android:text="@string/no_network_step3"
        android:textColor="#999999"
        android:textSize="11sp" />

    <Button
        android:layout_width="153.3dp"
        android:layout_height="36.6dp"
        android:layout_below="@id/no_network_step3"
        android:layout_centerHorizontal="true"
        android:background="@drawable/corner_purple_bg"
        android:text="@string/connect_us"
        android:textColor="@color/theme_main_color"
        android:textSize="13sp" />
</RelativeLayout>