<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/select_picture_as_head_portrait"
        android:textColor="@color/content_color"
        android:textSize="@dimen/btn_text_size" />

    <TextView
        android:id="@+id/tv_select_from_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/select_from_album"
        android:textColor="@color/theme_main_color"
        android:textSize="@dimen/btn_text_size" />

    <TextView
        android:id="@+id/tv_select_from_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/select_from_camera"
        android:textColor="@color/theme_main_color"
        android:textSize="@dimen/btn_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginTop="23dp"
        android:background="@color/divider_color" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="@drawable/app_translucent_listview_selector"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/content_color"
        android:textSize="@dimen/btn_text_size" />

</LinearLayout>