<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/dialog_white_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="40dp"
        android:lineSpacingMultiplier="1.5"
        android:gravity="center"
        android:id="@+id/content_tv"
        android:text="@string/stick_game_download_dialog_tips"
        android:textColor="@color/title_color"
        android:textSize="16sp" />

    <CheckedTextView
        android:id="@+id/stick_game_download_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/game_checkbox_icon"
        android:textColor="@color/prompt_color"
        android:padding="10dp"
        android:gravity="center"
        android:drawablePadding="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/stick_game_download_no_more_tips"/>

    <include layout="@layout/view_line_divider_withour_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/stick_game_download_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/cancel"
            android:textColor="@color/content_color"
            android:textSize="14sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/divider_color" />

        <TextView
            android:id="@+id/stick_game_download_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/stick_game_download_dialog_sure"
            android:textColor="@color/theme_main_color"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>